// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils/preview-tokens > buildPreviewScope > builds a forced dark scope 1`] = `
{
  "--color-preview-100-dark-hex": "#450007",
  "--color-preview-100-dark-oklch": "oklch(23.87% 0.10807 19.9)",
  "--color-preview-100-light-hex": "#450007",
  "--color-preview-100-light-oklch": "oklch(23.87% 0.10807 19.9)",
  "--color-preview-200-dark-hex": "#65000f",
  "--color-preview-200-dark-oklch": "oklch(30.947% 0.1401 19.9)",
  "--color-preview-200-light-hex": "#65000f",
  "--color-preview-200-light-oklch": "oklch(30.947% 0.1401 19.9)",
  "--color-preview-300-dark-hex": "#91001a",
  "--color-preview-300-dark-oklch": "oklch(40.11% 0.18158 19.9)",
  "--color-preview-300-light-hex": "#91001a",
  "--color-preview-300-light-oklch": "oklch(40.11% 0.18158 19.9)",
  "--color-preview-400-dark-hex": "#c80028",
  "--color-preview-400-dark-oklch": "oklch(50.961% 0.23071 19.9)",
  "--color-preview-400-light-hex": "#c80028",
  "--color-preview-400-light-oklch": "oklch(50.961% 0.23071 19.9)",
  "--color-preview-50-dark-hex": "#350004",
  "--color-preview-50-dark-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-50-light-hex": "#350004",
  "--color-preview-50-light-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-500-dark-hex": "#ff0044",
  "--color-preview-500-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-500-light-hex": "#ff0044",
  "--color-preview-500-light-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-600-dark-hex": "#ff2951",
  "--color-preview-600-dark-oklch": "oklch(67.486% 0.254 19.9)",
  "--color-preview-600-light-hex": "#ff2951",
  "--color-preview-600-light-oklch": "oklch(67.486% 0.254 19.9)",
  "--color-preview-700-dark-hex": "#ff737b",
  "--color-preview-700-dark-oklch": "oklch(75.195% 0.1919 19.9)",
  "--color-preview-700-light-hex": "#ff737b",
  "--color-preview-700-light-oklch": "oklch(75.195% 0.1919 19.9)",
  "--color-preview-800-dark-hex": "#ffb3b2",
  "--color-preview-800-dark-oklch": "oklch(85.178% 0.10455 19.9)",
  "--color-preview-800-light-hex": "#ffb3b2",
  "--color-preview-800-light-oklch": "oklch(85.178% 0.10455 19.9)",
  "--color-preview-900-dark-hex": "#fff0f0",
  "--color-preview-900-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-900-light-hex": "#fff0f0",
  "--color-preview-900-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-dark-hex": "#ff0044",
  "--color-preview-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#ff0044",
  "--color-preview-light-oklch": "oklch(63.27% 0.254 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > builds a forced light scope 1`] = `
{
  "--color-preview-100-dark-hex": "#ffe1e0",
  "--color-preview-100-dark-oklch": "oklch(93.983% 0.0394 19.9)",
  "--color-preview-100-light-hex": "#ffe1e0",
  "--color-preview-100-light-oklch": "oklch(93.983% 0.0394 19.9)",
  "--color-preview-200-dark-hex": "#ffc5c4",
  "--color-preview-200-dark-oklch": "oklch(88.467% 0.07906 19.9)",
  "--color-preview-200-light-hex": "#ffc5c4",
  "--color-preview-200-light-oklch": "oklch(88.467% 0.07906 19.9)",
  "--color-preview-300-dark-hex": "#ff9c9d",
  "--color-preview-300-dark-oklch": "oklch(81.324% 0.13639 19.9)",
  "--color-preview-300-light-hex": "#ff9c9d",
  "--color-preview-300-light-oklch": "oklch(81.324% 0.13639 19.9)",
  "--color-preview-400-dark-hex": "#ff5f6d",
  "--color-preview-400-dark-oklch": "oklch(72.865% 0.21476 19.9)",
  "--color-preview-400-light-hex": "#ff5f6d",
  "--color-preview-400-light-oklch": "oklch(72.865% 0.21476 19.9)",
  "--color-preview-50-dark-hex": "#fff0f0",
  "--color-preview-50-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-50-light-hex": "#fff0f0",
  "--color-preview-50-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-500-dark-hex": "#ff0044",
  "--color-preview-500-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-500-light-hex": "#ff0044",
  "--color-preview-500-light-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-600-dark-hex": "#eb0034",
  "--color-preview-600-dark-oklch": "oklch(57.861% 0.254 19.9)",
  "--color-preview-600-light-hex": "#eb0034",
  "--color-preview-600-light-oklch": "oklch(57.861% 0.254 19.9)",
  "--color-preview-700-dark-hex": "#b90024",
  "--color-preview-700-dark-oklch": "oklch(47.972% 0.21717 19.9)",
  "--color-preview-700-light-hex": "#b90024",
  "--color-preview-700-light-oklch": "oklch(47.972% 0.21717 19.9)",
  "--color-preview-800-dark-hex": "#790014",
  "--color-preview-800-dark-oklch": "oklch(35.165% 0.1592 19.9)",
  "--color-preview-800-light-hex": "#790014",
  "--color-preview-800-light-oklch": "oklch(35.165% 0.1592 19.9)",
  "--color-preview-900-dark-hex": "#350004",
  "--color-preview-900-dark-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-900-light-hex": "#350004",
  "--color-preview-900-light-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-dark-hex": "#ff0044",
  "--color-preview-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#ff0044",
  "--color-preview-light-oklch": "oklch(63.27% 0.254 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > locks very dark colors (l <= 0.3) to the light scale on both slots 1`] = `
{
  "--color-preview-100-dark-hex": "#ffc8c7",
  "--color-preview-100-dark-oklch": "oklch(89.04% 0.07477 19.9)",
  "--color-preview-100-light-hex": "#ffc8c7",
  "--color-preview-100-light-oklch": "oklch(89.04% 0.07477 19.9)",
  "--color-preview-200-dark-hex": "#ff6d77",
  "--color-preview-200-dark-oklch": "oklch(74.485% 0.19877 19.9)",
  "--color-preview-200-light-hex": "#ff6d77",
  "--color-preview-200-light-oklch": "oklch(74.485% 0.19877 19.9)",
  "--color-preview-300-dark-hex": "#e1002e",
  "--color-preview-300-dark-oklch": "oklch(55.637% 0.25187 19.9)",
  "--color-preview-300-light-hex": "#e1002e",
  "--color-preview-300-light-oklch": "oklch(55.637% 0.25187 19.9)",
  "--color-preview-400-dark-hex": "#700011",
  "--color-preview-400-dark-oklch": "oklch(33.317% 0.15083 19.9)",
  "--color-preview-400-light-hex": "#700011",
  "--color-preview-400-light-oklch": "oklch(33.317% 0.15083 19.9)",
  "--color-preview-50-dark-hex": "#fff0f0",
  "--color-preview-50-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-50-light-hex": "#fff0f0",
  "--color-preview-50-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-500-dark-hex": "#070000",
  "--color-preview-500-dark-oklch": "oklch(8% 0.03628 19.9)",
  "--color-preview-500-light-hex": "#070000",
  "--color-preview-500-light-oklch": "oklch(8% 0.03628 19.9)",
  "--color-preview-600-dark-hex": "#0c0000",
  "--color-preview-600-dark-oklch": "oklch(9.5% 0.04305 19.9)",
  "--color-preview-600-light-hex": "#0c0000",
  "--color-preview-600-light-oklch": "oklch(9.5% 0.04305 19.9)",
  "--color-preview-700-dark-hex": "#160001",
  "--color-preview-700-dark-oklch": "oklch(12.243% 0.05545 19.9)",
  "--color-preview-700-light-hex": "#160001",
  "--color-preview-700-light-oklch": "oklch(12.243% 0.05545 19.9)",
  "--color-preview-800-dark-hex": "#240002",
  "--color-preview-800-dark-oklch": "oklch(15.794% 0.07152 19.9)",
  "--color-preview-800-light-hex": "#240002",
  "--color-preview-800-light-oklch": "oklch(15.794% 0.07152 19.9)",
  "--color-preview-900-dark-hex": "#350004",
  "--color-preview-900-dark-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-900-light-hex": "#350004",
  "--color-preview-900-light-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-dark-hex": "#070000",
  "--color-preview-dark-oklch": "oklch(8% 0.03628 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#070000",
  "--color-preview-light-oklch": "oklch(8% 0.03628 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > locks very light colors (l >= 0.9) to the dark scale on both slots 1`] = `
{
  "--color-preview-100-dark-hex": "#51000a",
  "--color-preview-100-dark-oklch": "oklch(26.619% 0.12051 19.9)",
  "--color-preview-100-light-hex": "#51000a",
  "--color-preview-100-light-oklch": "oklch(26.619% 0.12051 19.9)",
  "--color-preview-200-dark-hex": "#8a0018",
  "--color-preview-200-dark-oklch": "oklch(38.721% 0.17529 19.9)",
  "--color-preview-200-light-hex": "#8a0018",
  "--color-preview-200-light-oklch": "oklch(38.721% 0.17529 19.9)",
  "--color-preview-300-dark-hex": "#db002c",
  "--color-preview-300-dark-oklch": "oklch(54.392% 0.24624 19.9)",
  "--color-preview-300-light-hex": "#db002c",
  "--color-preview-300-light-oklch": "oklch(54.392% 0.24624 19.9)",
  "--color-preview-400-dark-hex": "#ff606e",
  "--color-preview-400-dark-oklch": "oklch(72.95% 0.21391 19.9)",
  "--color-preview-400-light-hex": "#ff606e",
  "--color-preview-400-light-oklch": "oklch(72.95% 0.21391 19.9)",
  "--color-preview-50-dark-hex": "#350004",
  "--color-preview-50-dark-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-50-light-hex": "#350004",
  "--color-preview-50-light-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-500-dark-hex": "#ffe1e0",
  "--color-preview-500-dark-oklch": "oklch(94% 0.03928 19.9)",
  "--color-preview-500-light-hex": "#ffe1e0",
  "--color-preview-500-light-oklch": "oklch(94% 0.03928 19.9)",
  "--color-preview-600-dark-hex": "#ffe3e2",
  "--color-preview-600-dark-oklch": "oklch(94.375% 0.03672 19.9)",
  "--color-preview-600-light-hex": "#ffe3e2",
  "--color-preview-600-light-oklch": "oklch(94.375% 0.03672 19.9)",
  "--color-preview-700-dark-hex": "#ffe7e6",
  "--color-preview-700-dark-oklch": "oklch(95.061% 0.03207 19.9)",
  "--color-preview-700-light-hex": "#ffe7e6",
  "--color-preview-700-light-oklch": "oklch(95.061% 0.03207 19.9)",
  "--color-preview-800-dark-hex": "#ffebea",
  "--color-preview-800-dark-oklch": "oklch(95.949% 0.02612 19.9)",
  "--color-preview-800-light-hex": "#ffebea",
  "--color-preview-800-light-oklch": "oklch(95.949% 0.02612 19.9)",
  "--color-preview-900-dark-hex": "#fff0f0",
  "--color-preview-900-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-900-light-hex": "#fff0f0",
  "--color-preview-900-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-dark-hex": "#ffe1e0",
  "--color-preview-dark-oklch": "oklch(94% 0.03928 19.9)",
  "--color-preview-foreground-dark-hex": "#000000",
  "--color-preview-foreground-dark-oklch": "#000000",
  "--color-preview-foreground-light-hex": "#000000",
  "--color-preview-foreground-light-oklch": "#000000",
  "--color-preview-light-hex": "#ffe1e0",
  "--color-preview-light-oklch": "oklch(94% 0.03928 19.9)",
}
`;

exports[`utils/preview-tokens > buildPreviewScope > splits mid-lightness colors into distinct light and dark scales 1`] = `
{
  "--color-preview-100-dark-hex": "#450007",
  "--color-preview-100-dark-oklch": "oklch(23.87% 0.10807 19.9)",
  "--color-preview-100-light-hex": "#ffe1e0",
  "--color-preview-100-light-oklch": "oklch(93.983% 0.0394 19.9)",
  "--color-preview-200-dark-hex": "#65000f",
  "--color-preview-200-dark-oklch": "oklch(30.947% 0.1401 19.9)",
  "--color-preview-200-light-hex": "#ffc5c4",
  "--color-preview-200-light-oklch": "oklch(88.467% 0.07906 19.9)",
  "--color-preview-300-dark-hex": "#91001a",
  "--color-preview-300-dark-oklch": "oklch(40.11% 0.18158 19.9)",
  "--color-preview-300-light-hex": "#ff9c9d",
  "--color-preview-300-light-oklch": "oklch(81.324% 0.13639 19.9)",
  "--color-preview-400-dark-hex": "#c80028",
  "--color-preview-400-dark-oklch": "oklch(50.961% 0.23071 19.9)",
  "--color-preview-400-light-hex": "#ff5f6d",
  "--color-preview-400-light-oklch": "oklch(72.865% 0.21476 19.9)",
  "--color-preview-50-dark-hex": "#350004",
  "--color-preview-50-dark-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-50-light-hex": "#fff0f0",
  "--color-preview-50-light-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-500-dark-hex": "#ff0044",
  "--color-preview-500-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-500-light-hex": "#ff0044",
  "--color-preview-500-light-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-600-dark-hex": "#ff2951",
  "--color-preview-600-dark-oklch": "oklch(67.486% 0.254 19.9)",
  "--color-preview-600-light-hex": "#eb0034",
  "--color-preview-600-light-oklch": "oklch(57.861% 0.254 19.9)",
  "--color-preview-700-dark-hex": "#ff737b",
  "--color-preview-700-dark-oklch": "oklch(75.195% 0.1919 19.9)",
  "--color-preview-700-light-hex": "#b90024",
  "--color-preview-700-light-oklch": "oklch(47.972% 0.21717 19.9)",
  "--color-preview-800-dark-hex": "#ffb3b2",
  "--color-preview-800-dark-oklch": "oklch(85.178% 0.10455 19.9)",
  "--color-preview-800-light-hex": "#790014",
  "--color-preview-800-light-oklch": "oklch(35.165% 0.1592 19.9)",
  "--color-preview-900-dark-hex": "#fff0f0",
  "--color-preview-900-dark-oklch": "oklch(97% 0.01918 19.9)",
  "--color-preview-900-light-hex": "#350004",
  "--color-preview-900-light-oklch": "oklch(20% 0.09055 19.9)",
  "--color-preview-dark-hex": "#ff0044",
  "--color-preview-dark-oklch": "oklch(63.27% 0.254 19.9)",
  "--color-preview-foreground-dark-hex": "#ffffff",
  "--color-preview-foreground-dark-oklch": "#ffffff",
  "--color-preview-foreground-light-hex": "#ffffff",
  "--color-preview-foreground-light-oklch": "#ffffff",
  "--color-preview-light-hex": "#ff0044",
  "--color-preview-light-oklch": "oklch(63.27% 0.254 19.9)",
}
`;
